# account_bot

./: .gitignore  README.md  actions.py  categories.py  createdb.sql  exceptions.py  expenses.py  messages.py  middlewares.py  money.py  pkg.py  poster_storage.py  product_storage.py  pyproject.toml  pytest.ini  requirements.txt  rq.py  server.py  shipment.py  users.py
alembic/: env.py
alembic/versions/: bdbddb34acfb_product_price_to_set_of_prices.py  cb07fcedd9bc_add_prices.py
auxiliary/: system_functions.py
data/: preinitialization.xlsx
db/: migration.sql
db_modules/: db.py  db_functions.py  interface.py  poster_db.py
domain/: product.py
handlers/: fsm.py  fsm_graph.py  priority_handlers.py  roles.py  state_linked_list.py
handlers/admin/: __init__.py  get_balance_history.py  handlers.py  money_receive.py  money_transfer.py  pkg.py  set_date_interval.py  set_from_date.py  set_price.py  storage_history.py
handlers/barmen/: __init__.py  handlers.py  initial_handlers.py  middlewares.py  receiving_by_hand.py  test.py
handlers/cook/: handlers.py
handlers/expenses/: __init__.py  add_expense.py  handlers.py  increase_debt.py  initial_handlers.py  legacy.py
src/auxiliary/: fsm.py  system_functions.py
src/handlers/: priority_handlers.py  state_messages.py
src/handlers/admin/: __init__.py  get_balance_history.py  handlers.py  money_receive.py  money_transfer.py  set_date_interval.py  set_price.py  storage_history.py
src/poster_api/: ingredients.py  pkg.py  poster_managing.py
tests/: __init__.py  conftest.py  test_db.py  test_product_storage.py
(+14 files in other folders)
