[project]
name = "account-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "aiohttp>=3.12.15",
    "alembic>=1.16.5",
    "async-timeout>=5.0.1",
    "attrs>=25.3.0",
    "babel>=2.17.0",
    "chardet>=5.2.0",
    "dateparser>=1.2.0",
    "dotenv>=0.9.9",
    "idna>=3.10",
    "multidict==4.7.3",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pytest>=8.4.2",
    "python-levenshtein>=0.27.1",
    "pytz==2020.1",
    "regex>=2025.9.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "transitions>=0.9.3",
    "yarl==1.18",
]
